--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="header">
         <nav>
-            <img src="./photos/logo.png" class="logo">
+            <img src="photos/logo.png" class="logo">
             <div>
-                <button class="lang-btn">English <img src="./photos/down-icon.png" ></button>
+                <button class="lang-btn">English <img src="photos/down-icon.png" ></button>
                 <button>sing in</button>
             </div>
         </nav>
@@ -32,12 +32,12 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="./photos/feature-1.png" >
+                <img src="photos/feature-1.png" >
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="./photos/feature-2.png" >
+                <img src="photos/feature-2.png" >
             </div>
             <div class="text-col">
                 <h2>Download your shows to watch offline</h2>
@@ -50,12 +50,12 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="img-col">
-                <img src="./photos/feature-3.png" >
+                <img src="photos/feature-3.png" >
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="./photos/feature-4.png" >
+                <img src="photos/feature-4.png" >
             </div>
             <div class="text-col">
                 <h2>Create profiles for kids</h2>
@@ -164,7 +164,7 @@
                 <a href="#">Contact Us</a>
             </div>
         </div>
-        <button class="lang-btn"> English <img src="./photos/down-icon.png" ></button>
+        <button class="lang-btn"> English <img src="photos/down-icon.png" ></button>
         <p class="copyright-text">Netflix India</p>
     </div>
     </body>
