--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         <nav>
             <img src="photos/logo.png" class="logo">
             <div>
-                <select class="lang-btn"  name="Language" id="Lagguage">
-                    <option value="English">English</option>
-                    <option value="Hindi">Hindi</option>
-                </select>
+                 <button class="lang-btn">English <img src="./photos/down-icon.png" ></button> 
                 <button>sing in</button>
             </div>
         </nav>
