--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <nav>
             <img src="photos/logo.png" class="logo">
             <div>
-                 <button class="lang-btn">English <img src="./photos/down-icon.png" ></button> 
+                 <select class="lang-btn"  name="Language" id="Lagguage">
+                    <option value="English">English</option>
+                    <option value="Hindi">Hindi</option>
+                </select>
                 <button>sing in</button>
             </div>
         </nav>
@@ -32,7 +35,7 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="/photos/feature-1.png" >
+                <img src="photos/feature-1.png" >
             </div>
         </div>
         <div class="row">
